--- a/templates/landing-page.html
+++ b/templates/landing-page.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Lock and key</title>
-    <link rel="stylesheet" href="css/lading-page.css">
+    <link rel="stylesheet" href="css/landing-page.css">
 </head>
 <body>
 
