--- a/templates/landing-page.html
+++ b/templates/landing-page.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Lock and key</title>
-    <link rel="stylesheet" href="css/landing-page.css">
+    <link rel="stylesheet" href="{{url_for('static',filename='css/landing-page.css')}}">
 </head>
 <body>
 
@@ -13,7 +13,7 @@
     <section class="hero">
         <div class = "container">
             <a href="#">
-            <img src="Images/Lock_key.png" alt = "Lock and Key">
+            <img src="{{url_for('static',filename='images/Lock_key.png')}}" alt = "Lock and Key">
         </a> 
         </div>
     </section>
