--- a/templates/landing-page.html
+++ b/templates/landing-page.html
@@ -13,7 +13,7 @@
     <section class="hero">
         <div class = "container">
             <a href="#">
-            <img src="{{url_for('static',filename='images/Lock_key.png')}}" alt = "Lock and Key">
+            <img src="{{url_for('static',filename='Images/Lock_key.png')}}" alt = "Lock and Key">
         </a> 
         </div>
     </section>
