--- a/templates/start-page.html
+++ b/templates/start-page.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="css/start.css">
+    <link rel="stylesheet" href="{{url_for('static',filename='css/start.css')}}">
     <title>Lock and key</title>
 </head>
 <body>
@@ -12,7 +12,7 @@
     <section class="hero">
         <div class = "container">
             <a href="#">
-            <img src="Images/Lock_key.png" alt = "Lock and Key">
+            <img src="{{url_for('static',filename='Images/Lock_key.png')}}" alt = "Lock and Key">
         </a> 
         </div>
     </section>
