commit unlock round

--- a/templates/start-page.html
+++ b/templates/start-page.html
@@ -70,7 +70,7 @@
       </script>
 
     <section class="start">
-        <a href="#" class="start-btn" id="start-btn">Start The Hunt</a>
+        <a href="unlock.html" class="start-btn" id="start-btn">Start The Hunt</a>
     </section>
     <section class="footer">
         <div class="rule">
