--- a/templates/unlock.html
+++ b/templates/unlock.html
@@ -24,9 +24,9 @@
                 <ul class="primary-nav">
                     <li class="current"><a href="unlock.html">Home</a></li> 
                     <li><a href="#">Rules & Guidelines</a></li>
-                    <li><a href="#">Key 1</a></li>
-                    <li><a href="#">Key 2</a></li>
-                    <li><a href="#">Key 3</a></li>
+                    <li><a href="round1.html">Key 1</a></li>
+                    <li><a href="round2.html">Key 2</a></li>
+                    <li><a href="round3.html">Key 3</a></li>
                 </ul>
 
                 <ul class="secondary-nav">
