--- a/templates/round1.html
+++ b/templates/round1.html
@@ -5,7 +5,8 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Key 1</title>
-    <link rel="stylesheet" href="{{url_for('static',filename='css/round1.css')}}">
+    <!-- <link rel="stylesheet" href="{{url_for('static',filename='css/round1.css')}}"> -->
+    <link rel="stylesheet" href="/static/css/round1.css">
 </head>
 <body>
 
@@ -24,6 +25,13 @@
             </div>
             <input type="submit" name="enter" id="enter" value="enter">
         </form>
+    </section>
+
+    <section class="next-clue">
+        <ul>
+            <a href="unlock.html">XX</a>
+            <a href="key2.html">NextClue</a>
+        </ul>
     </section>
 
     
