--- a/templates/round2.html
+++ b/templates/round2.html
@@ -53,6 +53,14 @@ function clock() {
 setInterval(clock, inc);
 
     </script>
+
+
+<section class="next-clue">
+    <ul>
+        <a href="unlock.html">XX</a>
+        <a href="key3.html">NextClue</a>
+    </ul>
+</section>
     
 </body>
 </html>
