--- a/static/css/round1.css
+++ b/static/css/round1.css
@@ -1,5 +1,7 @@
+@import url("https://fonts.googleapis.com/css2?family=Cinzel:wght@600;700;900&display=swap");
 body {
   background-color: #969696;
+  font-family: Cinzel;
 }
 
 .image1 {
@@ -9,6 +11,8 @@ body {
 
 .image1 img {
   border: 3px solid #535353;
+  background-color: #535353;
+  border-radius: 1em;
   padding: 10em;
 }
 
@@ -31,5 +35,23 @@ body {
 .ans input[type="submit"]:hover {
   background-color: #535353;
   color: white;
+}
+
+.next-clue {
+  text-align: center;
+  word-spacing: 2em;
+}
+
+.next-clue a {
+  text-decoration: none;
+  border: 2px solid black;
+  color: black;
+  padding: .2em;
+  border-radius: .6em;
+}
+
+.next-clue a:hover {
+  background-color: black;
+  color: whitesmoke;
 }
 /*# sourceMappingURL=round1.css.map */
