--- a/static/css/round2.scss
+++ b/static/css/round2.scss
@@ -106,3 +106,20 @@ body {
     }
 
 }
+
+.next-clue{
+  text-align: center;
+  word-spacing: 2em;
+  a{
+      text-decoration: none;
+      border: 2px solid black;
+      color:black;
+      padding: .2em;
+      border-radius: .6em;
+      &:hover{
+          background-color: black;
+          color: whitesmoke;
+      }
+  }
+  
+}
