--- a/templates/unlock.html
+++ b/templates/unlock.html
@@ -23,7 +23,7 @@
                 
                 <ul class="primary-nav">
                     <li class="current"><a href="unlock.html">Home</a></li> 
-                    <li><a href="#">Rules & Guidelines</a></li>
+                    <li><a href="rules.html">Rules & Guidelines</a></li>
                     <li><a href="key1.html">Key 1</a></li>
                     <li><a href="key2.html">Key 2</a></li>
                     <li><a href="key3.html">Key 3</a></li>
