--- a/templates/unlock.html
+++ b/templates/unlock.html
@@ -63,7 +63,7 @@
 </section>
 
 <section class="next-clue">
-    <a href="round2.html">Find the keys!</a>
+    <a href="key2.html">Find the keys!</a>
 </section>
 
 <section class="gold-key">
