--- a/templates/landing-page.html
+++ b/templates/landing-page.html
@@ -76,7 +76,7 @@
 
     <section class="footer">
         <div class="rule">
-            <a href="rules.html">Rules & Guidlines</a>
+            <a href="rules.html">Rules & Guidelines</a>
         </div>
         <div class="contacts">
             <a href="#">Contacts</a>
