--- a/templates/round2.html
+++ b/templates/round2.html
@@ -30,33 +30,33 @@
 
 
     <script>
-     var inc = 1000;
+        var inc = 1000;
 
-clock();
+        clock();
 
-function clock() {
-  const date = new Date();
+    function clock() {
+        const date = new Date();
 
-  const hours = ((date.getHours() + 11) % 12 + 1);
-  const minutes = date.getMinutes();
-  const seconds = date.getSeconds();
-  
-  const hour = hours * 30;
-  const minute = minutes * 6;
-  const second = seconds * 6;
-  
-  document.querySelector('.hour').style.transform = `rotate(${hour}deg)`
-  document.querySelector('.minute').style.transform = `rotate(${minute}deg)`
-  document.querySelector('.second').style.transform = `rotate(${second}deg)`
-}
+        const hours = ((date.getHours() + 11) % 12 + 1);
+        const minutes = date.getMinutes();
+        const seconds = date.getSeconds();
+        
+        const hour = hours * 30;
+        const minute = minutes * 6;
+        const second = seconds * 6;
+        
+        document.querySelector('.hour').style.transform = `rotate(${hour}deg)`
+        document.querySelector('.minute').style.transform = `rotate(${minute}deg)`
+        document.querySelector('.second').style.transform = `rotate(${second}deg)`
+    }
 
-setInterval(clock, inc);
+    setInterval(clock, inc);
 
     </script>
 
 
 <section class="next-clue">
-    <ul>
+    <ul class="click">
         <a href="unlock.html">XX</a>
         <a href="key3.html">NextClue</a>
     </ul>
