--- a/templates/round1.html
+++ b/templates/round1.html
@@ -19,20 +19,49 @@
 
     <section class="ans">
         <form action="">
-            <div class="answer">
+            <ul>
+            
                 <label for="answer"></label>
                 <input type="text" name="answer" id="answer">
-            </div>
-            <input type="submit" name="enter" id="enter" value="enter">
+            
+            
+            
+                
+        </ul>
         </form>
     </section>
 
-    <section class="next-clue">
+    <div class="enter">
+    <button onclick="toggleText()" id="enter">Enter</button>
+</div>
+
+    
+
+
+
+    <section class="next-clue" >
+        <div id="Myid">
         <ul>
             <a href="unlock.html">XX</a>
             <a href="key2.html">NextClue</a>
         </ul>
+    </div>
     </section>
+
+
+   
+
+<script>
+function toggleText(){
+  var x = document.getElementById("Myid");
+  if (x.style.display === "none") {
+    x.style.display = "block";
+  } else {
+    x.style.display = "none";
+  }
+   
+}
+</script>
 
     
 
