--- a/templates/round5.html
+++ b/templates/round5.html
@@ -5,7 +5,8 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Binary Crossword</title>
-    <link rel="stylesheet" href="/static/css/round5.css">
+    <!-- <link rel="stylesheet" href="/static/css/round5.css"> -->
+    <link rel="stylesheet" href="{{url_for('static',filename='css/round5.css')}}">
 </head>
 <body>
     <h1>Binary Crossword </h1>
