--- a/static/css/login.css
+++ b/static/css/login.css
@@ -26,14 +26,14 @@ body {
   padding-right: 2em;
 }
 
-.login .email {
+.login .username {
   padding-bottom: 2em;
   padding-right: 1em;
   font-size: large;
 }
 
-.login .email input {
-  margin-left: 3em;
+.login .username input {
+  margin-left: 0em;
   -webkit-box-sizing: 2em;
           box-sizing: 2em;
   padding: .3em;
@@ -42,19 +42,22 @@ body {
 }
 
 .login .pass {
-  padding-bottom: 3em;
-}
-
-.login .pass label {
-  margin-left: -2em;
-  padding-right: 2em;
+  padding-bottom: 1em;
 }
 
 .login .pass input {
-  margin-left: 2.3em;
   padding: .3em;
   padding-right: 2em;
   border-radius: .35em;
+}
+
+.login .remember-me {
+  margin-left: 4.7em;
+  padding-bottom: 3em;
+}
+
+.login .remember-me label {
+  font-size: small;
 }
 
 .login .login-clk {
@@ -91,5 +94,48 @@ body {
   position: fixed;
   right: 0;
   padding-right: 1em;
+}
+
+@media all and (max-width: 640px) {
+  .container img {
+    width: 50%;
+  }
+  .login .username {
+    /* padding-bottom: 3em; */
+    font-size: large;
+    padding-top: 25px;
+  }
+  /* .login .username label {
+       padding-left: 100px;
+     } */
+  .login .username input {
+    /* margin-left: 0px; */
+    width: 130px;
+    -webkit-box-sizing: 2em;
+    box-sizing: 2em;
+    padding: .3em;
+    padding-right: 2em;
+    border-radius: .35em;
+  }
+  .login .pass {
+    padding-bottom: 3em;
+    font-size: large;
+    padding-left: -150px;
+    /* margin-right: 40px; */
+    margin-bottom: 0px;
+  }
+  .login .pass label {
+    margin-left: -10px;
+    padding-left: -10em;
+  }
+  .login .pass input {
+    width: 130px;
+    margin-top: 10px;
+    margin-right: -20px;
+    padding: .3em;
+    padding-left: 2em;
+    border-radius: .35em;
+    border-radius: .35em;
+  }
 }
 /*# sourceMappingURL=login.css.map */
