new start page, Admin added

--- a/templates/start-page.html
+++ b/templates/start-page.html
@@ -128,7 +128,7 @@ typewriter();
             <a href="rules.html">Rules & Guidlines</a>
         </div>
         <div class="contacts">
-            <a href="http://127.0.0.1:5000/admin/">Contacts</a>
+            <a href="https://lockandkey-define.herokuapp.com/admin/">Contacts</a>
         </div>    
     </section>
 
