--- a/templates/round5.html
+++ b/templates/round5.html
@@ -201,7 +201,7 @@
     </ul>
     
     <p>Click on a clue or press TAB. Type your answers.</p>
-    <p> When Done  <a href="round5-answer.html" target="_blank" rel="noreferrer noopener">Go here</a> (Dont Close This Page! )</p>
+    <p> When Done  <a href="{{url_for('round5')}}" target="_blank" rel="noreferrer noopener">Go here</a> (Dont Close This Page! )</p>
     </div>
 
     <script>
