--- a/templates/start-page.html
+++ b/templates/start-page.html
@@ -40,7 +40,7 @@
         hour = minute * 60,
         day = hour * 24;
 
-        let deadline = "July 8, 2021 18:33:00",
+        let deadline = "July 8, 2021 17:40:00",
         countDown = new Date(deadline).getTime(),
         x = setInterval(function() {    
 
@@ -84,7 +84,7 @@ var iScrollAt = 20;
  
 var iTextPos = 0; 
 var sContents = ''; 
-var iRow; 
+var iRow;  iiiiiasdo
  
 function typewriter()
 {
@@ -114,7 +114,7 @@ typewriter();
         
 
     <section class="start">
-        <a href="unlock.html" class="start-btn" id="start-btn">Start The Hunt</a>
+        <a href="{{ url_for('unlock') }}" class="start-btn" id="start-btn">Start The Hunt</a>
     </section>
 
 
@@ -142,17 +142,21 @@ typewriter();
         var role_var = "{{g.user.role}}";
         var x = document.getElementById("admin");
         var with_x = document.getElementById("withAdmin");
-        if ( role_var != "admin" ){
+        var start_btn = document.getElementById("start-btn");
+
+        if ( role_var != "admin" )
             {
             x.style.display = "none";
             with_x.style.display = "none";
+            start_btn.innerHTML = "Coming Soon...!!";
+            start_btn.href ="#"; 
         }
+        
 
-        }
-        // else{
-        //     x.style.display = "none";
-        //     with_x.style.display = "none";
-        // }
+
+
+        
+       
 
     </script>
 
