--- a/templates/start-page.html
+++ b/templates/start-page.html
@@ -40,7 +40,7 @@
         hour = minute * 60,
         day = hour * 24;
 
-        let deadline = "July 8, 2021 17:40:00",
+        let deadline = "July 8, 2021 18:33:00",
         countDown = new Date(deadline).getTime(),
         x = setInterval(function() {    
 
@@ -84,7 +84,7 @@ var iScrollAt = 20;
  
 var iTextPos = 0; 
 var sContents = ''; 
-var iRow;  iiiiiasdo
+var iRow;  
  
 function typewriter()
 {
@@ -152,11 +152,6 @@ typewriter();
             start_btn.href ="#"; 
         }
         
-
-
-
-        
-       
 
     </script>
 
