--- a/templates/rules.html
+++ b/templates/rules.html
@@ -9,11 +9,29 @@
 </head>
 <body>
     <h1>Rules And Guidelines</h1>
+    
+    <div class="rules" style="color: #8d4123;">
+        <ul>
+            <li>Locke and key is an individual event comprising 10 rounds.</li>
+            <li>The platform will be our own website</li>
+            <li>Contestants are requested to use a PC or Laptop</li>
+            <li>It is advised to have an uninterrupted internet connection.</li>
+            <li>The event will last for 24 hours and results will be published afterwards.</li>
+            <li>The participation will be on a first come first serve basis.</li>
+            
+        </u>
+    </div>
 
     <section class="okay-btn">
-        <a href="#">okay</a>
+        <a onclick="goBack()" href="#">okay</a>
         
     </section>
+
+    <script>
+        function goBack() {
+          window.history.back();
+        }
+        </script>
 
 </body>
 </html>
