--- a/templates/start-page.html
+++ b/templates/start-page.html
@@ -75,7 +75,7 @@
 
        <SCript>
            var aText = new Array(
-"Welcome {{g.user.username}}"
+"Welcome {{g.user.username}} !"
 );
 var iSpeed = 100; 
 var iIndex = 0; 
