--- a/static/css/rules.css
+++ b/static/css/rules.css
@@ -8,8 +8,23 @@ body {
 h1 {
   text-align: center;
   margin-top: 1em;
-  margin-bottom: 3em;
+  margin-bottom: 0em;
+  font-size: 4em;
   color: red;
+}
+
+.rules ul {
+  text-align: left;
+  font-size: 2em;
+}
+
+.rules ul li {
+  padding-bottom: .5em;
+}
+
+.rules ul li:hover {
+  color: red;
+  font-weight: bolder;
 }
 
 .okay-btn {
