--- a/static/css/rules.scss
+++ b/static/css/rules.scss
@@ -9,8 +9,25 @@ body{
 h1{
     text-align: center;
     margin-top: 1em;
-    margin-bottom: 3em;
+    margin-bottom: 0em;
+    font-size: 4em;
     color: red;
+}
+
+
+.rules{
+   ul{
+       text-align: left;
+       font-size: 2em;
+       li{
+           padding-bottom: .5em;
+        &:hover{
+            color: red;
+            font-weight: bolder;
+        }
+       }
+       
+   }
 }
 
 .okay-btn{
