--- a/templates/start-page.html
+++ b/templates/start-page.html
@@ -129,7 +129,7 @@ typewriter();
         </div>
         <div class="contacts">
             <li>
-                <a href="https://lockandkey-define.herokuapp.com/admin/" id="admin">Admin</a>
+                <a href="https://www.lockandkey-define.in/admin/" target="_blank" rel="noreferrer noopener" id="admin">Admin</a>
                 <a href="#" style="color: red; padding: 1em;" id="withAdmin">|</a>
 
                 <a href="{{url_for('logout')}}">Logout</a>
