--- a/templates/unlock.html
+++ b/templates/unlock.html
@@ -24,9 +24,18 @@
                 
                 <ul class="primary-nav">
                     <li class="current"><a href="unlock.html">Home</a></li> 
-                    <li><a href="key1.html">Key 1</a></li>
-                    <li><a href="key2.html">Key 2</a></li>
-                    <li><a href="key3.html">Key 3</a></li>
+                    <li class="admin" id="admin"><a href="https://www.lockandkey-define.in/admin/">Admin</a></li>
+                    <li><a href="key1.html" id="nav_key1" >Key 1</a></li>
+                    <li><a href="key2.html" id="nav_key2" >Key 2</a></li>
+                    <li><a href="key3.html" id="nav_key3" >Key 3</a></li>
+                    <li><a href="key4.html" id="nav_key4" >Key 4</a></li>
+                    <li><a href="key5.html" id="nav_key5" >Key 5</a></li>
+                    <li><a href="key6.html" id="nav_key6" >Key 6</a></li>
+                    <li><a href="key7.html" id="nav_key7" >Key 7</a></li>
+                    <li><a href="key8.html" id="nav_key8" >Key 8</a></li>
+
+                    
+                    
                 </ul>
 
                 <ul class="secondary-nav">
@@ -63,7 +72,7 @@
 </section>
 
 <section class="next-clue">
-    <a href="round2.html">Find the keys!</a>
+    <a href="key1.html">Find the keys!</a>
 </section>
 
 <section class="gold-key">
@@ -138,6 +147,39 @@
     //seconds
   }, 0)
 }());
+  </script>
+
+
+
+  <script>
+      var role_var = "{{g.user.role}}";
+      var x = document.getElementById("admin");
+      var nav_key1 = document.getElementById("nav_key1");
+      var nav_key2 = document.getElementById("nav_key2");
+      var nav_key3 = document.getElementById("nav_key3");
+      var nav_key4 = document.getElementById("nav_key4");
+      var nav_key5 = document.getElementById("nav_key5");
+      var nav_key6 = document.getElementById("nav_key6");
+      var nav_key7 = document.getElementById("nav_key7");
+      var nav_key8 = document.getElementById("nav_key8");
+
+      if ( role_var != "admin" ){
+        x.style.display = "none";
+        
+        if ( "{{g.user.key1}}" != '1' ) {nav_key1.style.display = "none";}
+        if ( "{{g.user.key2}}" != '1' ) {nav_key2.style.display = "none";}
+        if ( "{{g.user.key3}}" != '1' ) {nav_key3.style.display = "none";}
+        if ( "{{g.user.key4}}" != '1' ) {nav_key4.style.display = "none";}
+        if ( "{{g.user.key5}}" != '1' ) {nav_key5.style.display = "none";}
+        if ( "{{g.user.key6}}" != '1' ) {nav_key6.style.display = "none";}
+        if ( "{{g.user.key7}}" != '1' ) {nav_key7.style.display = "none";}
+        if ( "{{g.user.key8}}" != '1' ) {nav_key8.style.display = "none";}
+                            
+      }
+
+
+     
+
   </script>
     
 </body>
