--- a/templates/round1.html
+++ b/templates/round1.html
@@ -21,10 +21,11 @@
                 {{form.answer}}
        <button class="enter" type="submit" id="enter">Enter</button>
         </form>
+        <a id="homepage" href="unlock">HomePage</a>
     </section>
 
     <section class="next-clue" >
-        <div id="Myid">
+        <div id="Myid" style="display: none;" >
         <ul>
             <a href="unlock">{{nextKey}}</a>
             <a href="key2.html">NextClue</a>
