--- a/templates/round2.html
+++ b/templates/round2.html
@@ -54,7 +54,7 @@
     setInterval(clock, inc);
 
     </script>`
-
+<a id="homepage" href="unlock">HomePage</a>
 
 <section class="next-clue" >
     <ul class="click" style="display: none;" id="Myid">
