--- a/templates/round3.html
+++ b/templates/round3.html
@@ -53,7 +53,7 @@
 
 
             document.getElementById("bon").innerHTML = "Continue ";
-            document.getElementById("bon").href = "crossword";
+            document.getElementById("bon").href = "key4.html";
             headline.innerText = "Too late, Missed the Bonus Round!";
             countdown.style.display = "none";
             content.style.display = "block";
