--- a/templates/unlock.html
+++ b/templates/unlock.html
@@ -24,6 +24,7 @@
                 
                 <ul class="primary-nav">
                     <li class="current"><a href="unlock.html">Home</a></li> 
+                    <li><a href="rules.html" >Rules & Guidelines</a></li>
                     <li class="admin" id="admin"><a href="https://www.lockandkey-define.in/admin/">Admin</a></li>
                     <li><a href="key1.html" id="nav_key1" >Key 1</a></li>
                     <li><a href="key2.html" id="nav_key2" >Key 2</a></li>
