--- a/static/css/unlcok.scss
+++ b/static/css/unlcok.scss
@@ -7,11 +7,6 @@ body{
 .navbar {
     background: rgb(31, 31, 31);
     padding: 1em;
-    
-    .logo-div {
-        width: 80%;
-        margin-right: 3em;
-    }
 
 
     nav {
@@ -37,7 +32,7 @@ nav {
     position: fixed;
     z-index: 999;
     width: 66%;
-    right: 0;
+    right:0;
     top: 0;
     background: #20272E;
     height: 100vh;
@@ -49,6 +44,7 @@ nav {
 
     li {
         list-style-type: none;
+        font-size: .8em;
         
         a {
             color: white;
@@ -56,7 +52,7 @@ nav {
             text-decoration: none;
             display: block;
             padding: .9em;
-            font-size: 1em;
+            
             text-align: right;
 
             &:hover {
@@ -85,10 +81,10 @@ nav {
     }
 
     .logo-div {
-        width: 150%;
-    
+        display: block;
+        
         img{
-            width: 100%;
+            width: 115%;
         }
 
 
@@ -96,7 +92,7 @@ nav {
 
     .navbar .container {
         display: grid;
-        grid-template-columns: 180px auto;
+        grid-template-columns: 100px auto;
         justify-content: unset;
     }
 
@@ -168,29 +164,29 @@ nav {
        margin-top: 1em;
        margin-bottom: 1em;
    }
-  }
+}
 
-  .next-clue{
-      text-align: center;
-      margin-bottom: 0em;
-      z-index: 999;
-      
-      a{
-          border: 3px solid red;
-          position: relative;
-          z-index: 999;
-          font-size: larger;
-          
-          border-radius:  1em;
-          padding: .3em;
-          color: red;
-          text-decoration: none;
-          &:hover{
-              color: whitesmoke;
-              background-color: red;
-          }
-      }
-  }
+.next-clue{
+    text-align: center;
+    margin-bottom: 0em;
+    z-index: 999;
+    
+    a{
+        border: 3px solid red;
+        position: relative;
+        z-index: 900;
+        font-size: larger;
+        
+        border-radius:  1em;
+        padding: .3em;
+        color: red;
+        text-decoration: none;
+        &:hover{
+            color: whitesmoke;
+            background-color: red;
+        }
+    }
+}
 
 
 .gold-key{
@@ -259,8 +255,7 @@ nav {
   
 }
   
-  @media all and (max-width: 768px) {
-
+@media all and (max-width: 768px) {                                     //timer
     .timer{
     h1 {
       font-size: 1.5rem;
@@ -274,11 +269,14 @@ nav {
     li span {
       font-size: 3.375rem;
     }
+    }
 }
-  }
 
-  @media all and (max-width: 640px) {
-  
+@media all and (max-width: 640px) {
+    .logo-div {
+       display: none;
+    }
+
     .next-clue{
       padding-left: 80px;
       padding-bottom: 120px;
@@ -307,30 +305,30 @@ nav {
       padding-top: 20px;
     }
     
-  }
+}
   
-  .timer {
+.timer {
     font-family: Orbitron;
     color: #8d4123;
     margin: 0 auto;
     text-align: center;
-  }
+}
   
-  .timer h1 {
+.timer h1 {
     font-weight: normal;
     letter-spacing: .125rem;
     text-transform: uppercase;
-  }
+}
   
-  .timer li {
+.timer li {
     display: inline-block;
     font-size: 1.5em;
     list-style-type: none;
     padding: 1em;
     text-transform: uppercase;
-  }
+}
   
-  .timer li span {
+.timer li span {
     display: block;
     font-size: 4.5rem;
-  }
+}
